2008-02-15  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/fp.h (DNANBITS, longToDouble): Removed.

	* kaffe/kaffevm/fp.c (longToDouble): Simplified collapsing of NaNs.
	Made function static.

2008-02-15  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/fp.c (doubleAdd, doubleSubtract, doubleMultiply)
	(doubleDivide): Use KAFFE_JDOUBLE_NAN.

	* kaffe/kaffevm/soft.c (soft_cvtfd): Use KAFFE_JDOUBLE_NAN. Documented.

	* kaffe/kaffevm/baseClasses.c (initBaseClasses): Initialize KAFFE_JDOUBLE_NAN.

	* kaffe/kaffevm/baseClasses.h (KAFFE_JDOUBLE_NAN): New field caching
	java.lang.Double.NaN.

2008-02-14  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/fp.h (DISNAN): Removed.

	* kaffe/kaffevm/soft.c (soft_cvtdf, soft_cvtdl, soft_cvtdi),
	kaffe/kaffevm/fp.c (doubleAdd, doubleSubtract, doubleMultiply)
	(doubleDivide): 

2008-02-14  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/fp.h (FISNAN): Removed.

	* kaffe/kaffevm/soft.c (soft_cvtfl, soft_cvtfd, soft_cvtfi), 
	kaffe/kaffevm/fp.c (floatDivide, floatMultiply, floatSubtract)
	(floatAdd): Use isnan instead of FISNAN.
	
2008-02-12  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/soft.c (soft_fcmpg): Delegate to soft_dcmpg.
	(soft_fcmpl): Delegate to soft_dcmpl.

2008-02-12  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/intrp/icode.h (cmpg_float, cmpl_float): 
	Use soft_dcmpg and soft_dcmpl internally, as they 
	produce the same results, since the float parameters 
	are automatically widened to equivalent doubles.

2008-02-11  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/soft.c (soft_dcmp): Documented.

2008-02-11  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/soft.c (soft_dcmp): New function.
	Implements dcmpl/dcmpg according to VM spec.
	(soft_dcmpl, soft_dcmpg) Call soft_dcmp.

2008-02-03  Dalibor Topic  <robilad@kaffe.org>

	* config/arm/jit-arm.def (cvtfi_RxR): Removed.

2008-02-03  Dalibor Topic  <robilad@kaffe.org>
