@@ -1,5 +1,17 @@
 2008-02-15  Dalibor Topic  <robilad@kaffe.org>
 
+	* kaffe/kaffevm/fp.c (floatAdd, floatSubtract, floatMultiply)
+	(floatDivide):  Use KAFFE_JFLOAT_NAN.
+
+	* kaffe/kaffevm/soft.c (soft_cvtdf):  Use KAFFE_JFLOAT_NAN. Documented.
+
+	* kaffe/kaffevm/baseClasses.c (initBaseClasses): Initialize KAFFE_JFLOAT_NAN.
+
+	* kaffe/kaffevm/baseClasses.h (KAFFE_JFLOAT_NAN): New field caching
+	java.lang.Float.NaN.
+
+2008-02-15  Dalibor Topic  <robilad@kaffe.org>
+
 	* kaffe/kaffevm/fp.h (DNANBITS, longToDouble): Removed.
 
 	* kaffe/kaffevm/fp.c (longToDouble): Simplified collapsing of NaNs.
